--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,13 +1,26 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="{% static 'style.css' %}">
 <div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory List</title>
-    
+    <style>
+        div{
+            text-align: center;
+        }
+        h1,h3{
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        table, tr, th, td {
+            margin-left: auto;
+            margin-right: auto;
+            border-style:solid;
+            border-color: aqua;
+            font-size: medium;    
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Fantasy Guild Market!</h1>
