--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,31 +1,36 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory List</title>
+    <title>Inventory App</title>
     <style>
         div{
             text-align: center;
-        }
-        h1,h3{
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-        table, tr, th, td {
+        table {
             margin-left: auto;
             margin-right: auto;
-            border-style:solid;
-            border-color: aqua;
-            font-size: medium;    
+            border-style: solid;
+            border-color: rgb(34, 72, 175);   
+        }
+        th{
+            border-style: outset;
+            border-color: rgb(34, 72, 175);
+            padding: 5px;
+        }
+        td{
+            border-style: solid;
+            border-color: rgb(29, 149, 127);
         }
     </style>
 </head>
 <body>
     <h1>Welcome to Fantasy Guild Market!</h1>
     <h3>by {{name}} from {{class}}</h3>
-    <h3 id = "amount">amount: 0 gil</h3>
+    <h3 id = "amount">amount: {{ amount }} gil</h3>
     <!-- <button onclick="addAmount()">Add Amount</button> -->
     <table style="width: 80% ;">
         <tr>
@@ -34,53 +39,14 @@
             <th>POWER</th>
             <th>DESCRIPTION</th>
         </tr>
-        {% for x in range%}
-            <tr>
-                <td>{{ items.x }}</td>
-                <td>{{ price.x }}</td>
-                <td>{{ power.x }}</td>
-                <td>{{ description.x }}</td>
-            </tr>
-        {% endfor %}
-    
+           
+        <tr>
+            <td>{{ items }}</td>
+            <td>{{ price }} gil</td>
+            <td>+{{ power }}</td>
+            <td>{{ description }}</td>
+        </tr>
     </table>
-    
-
-    <!-- <button onclick="addItem()">Add Item</button>
-    <button onclick="removeItem()">Remove Item</button>
-    
-    <script>
-        function addItem() {
-            var newItem = prompt("Enter the item name:");
-            if (newItem) {
-                var inventoryList = document.getElementById("inventory-list");
-                var listItem = document.createElement("li");
-                listItem.textContent = newItem;
-                inventoryList.appendChild(listItem);
-            }
-        }
-
-        function removeItem() {
-            var inventoryList = document.getElementById("inventory-list");
-            var items = inventoryList.getElementsByTagName("li");
-
-            if (items.length > 0) {
-                // Remove the last item in the list
-                inventoryList.removeChild(items[items.length - 1]);
-            } else {
-                alert("Inventory list is empty.");
-            }
-        }
-        function addAmount() {
-            var addMoney = prompt("Enter amount: ");
-            if(addMoney.valueOf() < 0) {
-                alert("amount is not valid!");
-            } else {
-                
-            }
-        }
-        
-    </script> -->
 </body>
 </html>
 </div>
