--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -7,8 +7,13 @@
     <title>Inventory App</title>
     <style>
         div{
-            text-align: center;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        h1{
+            text-align: center;
+        }
+        h3{
+            text-align: center;
         }
         table {
             margin-left: auto;
@@ -20,10 +25,19 @@
             border-style: outset;
             border-color: rgb(34, 72, 175);
             padding: 5px;
+            background-color: lightgrey;
+            text-align: center;
+            font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
         }
         td{
             border-style: solid;
             border-color: rgb(29, 149, 127);
+            background-color:greenyellow;
+            text-align: center;
+        }
+        body{
+            background-color:honeydew;
+            background-blend-mode: difference;
         }
     </style>
 </head>
@@ -49,5 +63,5 @@
         {% endfor %}
     </table>
 </body>
-</html>
 </div>
+</html>
