--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -81,13 +81,19 @@
     </table>
 
     <h3>total item in inventory: {{ items|length }}</h3>
-
+    
     <a href="{% url 'main:create_product' %}">
         <button>
             Add New Product
         </button>
     </a>
-    
+    <a href="{% url 'main:logout' %}">
+        <button>
+            Logout
+        </button>
+    </a>
+
+    <h5>Sesi terakhir login: {{ last_login }}</h5>
     <script>
 
     </script>
