--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,38 +1,31 @@
 {% extends 'base.html' %} 
+{% load static %}
+
+{% block meta %}
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="{% static 'css/create_product.css' %}" />
+{% endblock meta %}
 
 {% block content %}
-<style>
-    *{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    .element{
-        display: flex;
-        justify-content: center;
-    }
-    .h1{
-        text-align: center;
-    }
-    body{
-        background-color: honeydew;
-    }
-
-</style>
 
 <body>
-<h1 class="h1">Add New Product</h1>
-<div class="element">
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
-</div>
+    <div class="container">
+        <div class="element">
+        <h1 class="h1">Add New Product</h1>
+                <form method="POST">
+                    {% csrf_token %}
+                    <table>
+                        {{ form.as_table }}
+                        <tr>
+                            <td></td>
+                            <td>
+                                <div class="button"><input type="submit" value="Add Product"/></div>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+        </div>
+    </div>
 </body>
+
 {% endblock %}
