--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,45 +1,43 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block meta %}
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/register.css'%}">
 {% endblock meta %}
 
 {% block content %}  
 <style>
-    *{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    div{
-        justify-content: center;
-    }
-    body{
-        background-color: honeydew;
-    }
 
 </style>
-<div class = "login">
-    
-    <h1>Register</h1>  
+<body>
+<div class="container">
+    <div class = "login">
+        
+        <h1 class="title">Register</h1> 
+        <br>
+            <form method="POST" >  
+                {% csrf_token %}  
+                <table>  
+                    {{ form.as_table }}  
+                    <tr>  
+                        <td></td>
+                        <td>
+                            <div class="loginbutton"><input type="submit" name="submit" value="Daftar"/></div>
+                        </td>  
+                    </tr>  
+                </table>  
+            </form>
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
-
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
+        {% if messages %}  
+            <ul>   
+                {% for message in messages %}  
+                    <li>{{ message }}</li> 
                 {% endfor %}  
-        </ul>   
-    {% endif %}
+            </ul>   
+        {% endif %}
 
-</div>  
-
+    </div>  
+</div>
+</body>
 {% endblock content %}
