--- a/main/static/main.css
+++ b/main/static/main.css
@@ -9,20 +9,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 25vh;
+    height: 23vh;
 }
 .backgroundCard{
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
-    padding: 30px;
-    margin-left: 200px;
-    margin-right: 200px;
+    padding: 40px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
-    width: auto;
-    height: auto;
 }
 div{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
