--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -30,6 +30,7 @@
                 <th>Amount</th>
                 <th>Qty</th>
                 <th>Del</th>
+                <th>Edit</th>
             </tr>
             {% for item in items %} 
             <tr class="row">
@@ -57,6 +58,14 @@
                         </button>
                     </a>
                 </td>
+                <td>
+                    <a href="{% url 'main:edit_product' item.pk %}">
+                        <button>
+                            Edit
+                        </button>
+                    </a>
+                </td>
+                
             </tr>
             {% endfor %}
         </table>
