--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -85,9 +85,11 @@
 
         <h5>Sesi terakhir login: {{ last_login }}</h5>
         
-        <script>
-
-        </script>
+        {% if messages %}
+            {% for message in messages %}
+            {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+            {% endfor %}
+        {% endif %}
     </body>
     </div>
 </div>
