--- a/main/static/main.css
+++ b/main/static/main.css
@@ -5,11 +5,13 @@ body{
     background-repeat: no-repeat;
 }
 .container{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
     margin-top: -50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 23vh;
+    height: 20vh;
 }
 .backgroundCard{
     background-color: rgba(255, 255, 255, 0.7);
@@ -22,24 +24,26 @@ body{
     margin-top: auto;
     margin-bottom: auto;
 }
-div{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-}
 h1{
     text-align: center;
 }
 h3{
     text-align: center;
 }
-table {
+.product_table{
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
     border-color: rgb(34, 72, 175);   
 }
-.row:last-child td{
+.lastrow:last-child td{
     background-color: rgb(242, 231, 22);
+}
+td.column{
+    border-style: solid;
+    border-color: rgb(29, 149, 127);
+    background-color:red;
+    text-align: center;
 }
 th{
     border-style: outset;
@@ -49,12 +53,7 @@ th{
     text-align: center;
     font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
 }
-td{
-    border-style: solid;
-    border-color: rgb(29, 149, 127);
-    background-color:greenyellow;
-    text-align: center;
-}
+
 a{
     justify-content: center;
     align-items: center;
