fixing static css folder wont load

--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -7,7 +7,41 @@
 {% endblock meta %}
 
 {% block content %}
-
+<style>
+    *{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    .container{
+        margin-top: -50px;
+        display: flex;
+        justify-content: center;
+        text-align: left;
+        align-items:center;
+        height: 100vh;
+    }
+    .element{
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        padding: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    .h1{
+        text-align: center;
+    }
+    .button{
+        margin-left: 60px;
+    }
+    body{
+        background-image: url("https://i.redd.it/500pllhyaf3b1.jpg?w=144");
+        background-size: cover;
+        background-attachment:fixed;
+        background-repeat: no-repeat;
+    }
+</style>
 <body>
     <div class="container">
         <div class="element">
